# openvinox

./: .gitignore  LICENSE  README.md
segment/: CMakeLists.txt
segment/src/: Segment.cpp  Segment.hpp  main.cpp
yolov5/: CMakeLists.txt
yolov5/src/: Yolov5Detector.cpp  Yolov5Detector.hpp  main.cpp
